[package]
name = "ocr"
version = "0.1.0"
authors = ["reslario <reslario.code@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
base64 = "0.12.1"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = { version = "1.0.112", features = ["derive"] }
structopt = "0.3.14"
